--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,188 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/* nav styles */
+
+nav {
+    display: flex;
+    /* background-color: #f3cf7a; */
+    justify-content: space-between;
+    font-family: Arial, Helvetica, sans-serif;
+    background-image: linear-gradient(to right, #f3cf7a, #523c0a);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+nav .logo img {
+    width: auto;
+    height: 90px;
+}
+
+nav ul {
+    display: flex;
+}
+
+nav ul li {
+    margin: 5px;
+    color: navy;
+    list-style: none;
+}
+
+.page-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* product style */
+
+.products {
+    width: 420px;
+    height: 600px;
+    border: 1px solid black;
+    box-shadow: 0 7px 10px 0 grey;
+    margin: 5px;
+    /* border-radius: 50px; */
+}
+
+#prod-container {
+    background-color: #acaeb2;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /* grid-gap: 5px; */
+    justify-content: center;
+    align-items: center;
+}
+
+.products img {
+    width: 420px;
+    height: auto;
+}
+
+.prod-text h4 {
+    display: flex;
+    justify-content: center;
+}
+
+.prod-text p {
+    display: flex;
+    text-align: center;
+    margin: 5px;
+}
+
+
+/* footer Styles */
+
+.container {
+    display: grid;
+    grid-template-columns: 0.5fr 0.5fr 0.5fr 1fr 1fr;
+    background-color: #6e3b3b;
+    height: 15vh;
+    font-size: 20px;
+}
+
+.container .form2 input,
+button {
+    height: 25px;
+    border-radius: 5px;
+    margin: 5px;
+}
+
+.container .form2 input {
+    width: 300px;
+}
+
+#intouch {
+    margin: 20px;
+}
+
+#intouch p {
+    margin: 2px;
+    font-size: 17px;
+}
+
+#copyright {
+    margin: 1px;
+    display: flex;
+    text-align: center;
+}
+
+
+/* About us styles */
+
+#About-us {
+    background-color: #e6c073;
+    font-family: Arial, Helvetica, sans-serif;
+    display: flex;
+    border-radius: 50px 0 100px 0;
+    box-shadow: 0 7px 10px 0 black;
+}
+
+#About-text p,
+h2,
+h3,
+blockquote {
+    margin: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* contact style */
+
+#contact {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-between;
+    height: 60vh;
+}
+
+.form-container {
+    background-color: #e6c073;
+    display: grid;
+    height: 350px;
+    grid-template-columns: 1fr;
+    width: 97%;
+    box-shadow: 0 7px 10px 0 black;
+    border-radius: 0 50px 50px 0;
+    margin: 10px;
+}
+
+.form-container input {
+    width: 300px;
+    height: 20px;
+    margin: 20px 0 0 5px;
+}
+
+.form-container textarea {
+    margin: 5px;
+    width: 300px;
+    height: 150px;
+}
+
+.map {
+    margin: 10px;
+}
+
+iframe {
+    width: 900px;
+    height: 350px;
+    margin: 1px;
+    box-shadow: 0 7px 10px 0 black;
+}
+
+#contact .class iframe {
+    width: 700px;
+    height: auto;
+}
+
+
+/* Customers Styles */
+
+#custs {
+    display: flex;
+    justify-content: space-between;
+    margin: 5px;
+}
+
+#custs section {
+    box-shadow: 0 7px 10px 0 black;
+    margin: 5px;
 }
